[tool.poetry]
name = "nword-counter-deluxe"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.21.0"
"discord.py" = "^1.6.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
